base de datos experimental